^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- ATOM generator considers feed entry links without the rel attribute set as
  rel="alternate" by default.
- Fixed issue #13109: Fixed RSS1 (RDF) parsing when the "resource" attribute
  is specified as "rdf:resource".
- Fixed iTunes module elements handling if using a different prefix than
  'itunes'.


1.1beta1 - Tuesday 27 May 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Removed ezcFeedCanNotParseException class, using ezcFeedParseErrorException
  instead.
- Changed protected methods and variables from processor classes to private.
- Changed get() and set() functions from ezcFeedProcessor into __get() and
  __set(), and added __isset().
- Added the registerFeed() and registerModule() functions to ezcFeed.
- Removed plural properties from ezcFeed (authors, categories, contributors,
  items, links).
- Added feed element types (person, category, link, image, etc) to specify
  different feed and module elements.
- Removed the method set() from ezcFeed and ezcFeedItem.
- Removed the class ezcFeedTools.
- Renamed ezcFeedItem to ezcFeedEntryElement.
- Added a feed type to the ezcFeed method generate() to specify the output
  feed type, and made the ezcFeed constructor feed type argument optional.
- The properties are stored in ezcFeed and are assigned in the same way
  without being dependent on the feed type.


1.1alpha1 - Monday 07 April 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Reorganized internal structure of classes.
- Added ezcFeedSchema to define different feed types.
- Added ezcFeedElement instead of ezcFeedItem.
- Added support for XML attributes for feeds.
- Added regression tests based on the ones from Template.
- In RSS2 the title, link and description nodes of item nodes are not all
  required, but at least one of title or description nodes is required.